feat: Add Usercount

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>cccccccclick!!!!</title>
     <meta name="description" content="🐈をたくさんクリックしよう" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🐈</text></svg>"></link>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🐈</text></svg>"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -18,7 +18,7 @@
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="640"/>
     <meta property="og:image:height" content="426"/>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap&text=0123456789%2C%E5%9B%9E%E3%82%AF%E3%83%AA%E3%83%83%E3%82%AF%E3%81%95%E3%82%8C%E3%81%9F%E7%8C%AB" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap&text=0123456789%2C%E5%9B%9E%E3%82%AF%E3%83%AA%E3%83%83%E3%82%AF%E3%81%95%E3%82%8C%E3%81%9F%E7%8C%AB%E4%BA%BA%E3%81%AB" rel="stylesheet">
     <style>
         body {
             font-family: "Noto Sans JP", "Noto Sans CJK", "Helvetica Neue", "Helvetica", "Hiragino Sans", sans-serif;
@@ -40,8 +40,9 @@
         </div>
     </p>
     <h1>
+        <span id="usercount"></span>
         <span id="count"></span>
-        <span>回クリックされた猫</span>
+        <span>回クリックされた🐈</span>
     </h1>
     <footer>
         Photo by <a href="https://www.pexels.com/ja-jp/photo/730896/" target="_blank" rel="noopener noreferrer">Pexels CC0</a><br />
